// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TxStatusModal should show completed status 1`] = `
<div>
  <dialog
    class="overlay"
  >
    <div
      class="success"
    >
      <div
        class="MacLachlan transparent"
      >
        Identicon
      </div>
    </div>
    <h1
      class="heading"
    >
      Your transaction was successfully sent
    </h1>
    <a
      class="confirm"
      href="/account/4sm9oDiYFe22D7Ck2aBy5Y2gzxi2HhmGML98W9ZD2qmsqKCr"
    >
      OK
    </a>
  </dialog>
</div>
`;

exports[`TxStatusModal should show error status 1`] = `
<div>
  <dialog
    class="overlay"
  >
    <div
      class="error"
    >
      <div
        class="MacLachlan transparent"
      >
        Identicon
      </div>
    </div>
    <h1
      class="heading"
    >
      Your transaction has failed
    </h1>
    <button
      class="confirm"
    >
      OK
    </button>
  </dialog>
</div>
`;

exports[`TxStatusModal should show pending status 1`] = `
<div>
  <dialog
    class="overlay"
  >
    <div
      class="MacLachlan transparent"
    >
      Identicon
    </div>
    <h1
      class="heading"
    >
      Your transaction is being processed
    </h1>
    <a
      class="confirm"
      href="/account/4sm9oDiYFe22D7Ck2aBy5Y2gzxi2HhmGML98W9ZD2qmsqKCr"
    >
      OK
    </a>
  </dialog>
</div>
`;
